WebPreview: fix vertical position
The iframe containing the preview was positioned 4 pixels too high,
obscuring the lower border of the toolbar. This moves it down those
4 pixels so the toolbar's border is visible.

--- a/client/components/web-preview/style.scss
+++ b/client/components/web-preview/style.scss
@@ -148,7 +148,7 @@
 .web-preview__placeholder {
 	width: 100%;
 	position: absolute;
-		top: 49px;
+		top: 53px;
 		bottom: 0;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
